fix nav on mobile

--- a/client/src/home/home.scss
+++ b/client/src/home/home.scss
@@ -224,30 +224,8 @@
   }
   
   .nav {
-    left: 0;
-    bottom: 0;
-    top: auto;
-    transform: none;
-    padding: 0;
-    
-    &__links {
-      width: 100%;
-    }
-
-    &__social-links {
-      justify-content: center;
-      position: fixed;
-      top: 0;
-      margin-top: 1rem;      
-      width: 100%;
-    }
-
-    &__social-link {
-      font-size: 1.8rem;
-    }
     
     &__item {
-      border: 3px solid $primary-color;
       
       &:last-child {
         border-left: none;
@@ -258,10 +236,6 @@
       display: none;
     }
     
-    &__link {
-      line-height: 3;
-      font-size: 1.4rem;
-    }
   }
   
   .cursor {
@@ -305,9 +279,4 @@
     } 
   }  
 
-  .nav {
-    &__link {
-      font-size: 1.2rem;
-    }
-  }
 }
