--- a/client/src/styles/_nav.scss
+++ b/client/src/styles/_nav.scss
@@ -128,3 +128,38 @@
     
   }
 }
+
+@media (max-width: 700px) {
+  .nav {
+    left: 0;
+    bottom: 0;
+    top: auto;
+    transform: none;
+    padding: 0;
+    
+    &__links {
+      width: 100%;
+    }
+
+    &__social-links {
+      justify-content: center;
+      position: fixed;
+      top: 0;
+      margin-top: 1rem;      
+      width: 100%;
+    }
+
+    &__social-link {
+      font-size: 1.8rem;
+    }
+    
+    &__item {
+      border: 3px solid $primary-color;
+    }
+    
+    &__link {
+      line-height: 3;
+      font-size: 1.4rem;
+    }
+  }
+}
